# Kyxnt

./: Cargo.toml
src/: kyxnt.rs  main.rs  training.json
src/kyxnt/: networks.rs  nodes.rs
src/kyxnt/networks/: feedforward.rs  functions.rs
src/kyxnt/networks/functions/: learning_rate.rs
src/kyxnt/nodes/: input.rs  standard.rs
