[package]
name = "neural-network"
version = "0.1.0"
authors = ["SpicySpices <42986319+SpicySpices@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.4"
serde_json = "1.0"
mnist = "0.4.1"